@@ -2,15 +2,15 @@ Source: gracie
 Section: web
 Priority: extra
 Maintainer: Ben Finney <ben+debian@benfinney.id.au>
-Build-Depends: debhelper (>= 5.0.44),
+Build-Depends: debhelper (>= 7.0.8),
     docbook-to-man,
+    python-central (>= 0.6.8),
     graphicsmagick-imagemagick-compat | imagemagick,
     python-docutils (>= 0.3.9),
     python-dev (>= 2.4),
-    python-central (>= 0.5.6),
-    python-setuptools (>= 0.6b3-1)
-Standards-Version: 3.7.3
-XS-Python-Version: >= 2.4
+    python-setuptools (>= 0.6b3)
+Standards-Version: 3.8.0
+XS-Python-Version: all
 
 Package: gracie
 Architecture: all
