@@ -1,8 +1,10 @@
 gracie (0.2.6-2) unstable; urgency=high
 
   * Fix debhelper configuration, to allow package to install.
+  * Re-work for debhelper 7.
+  * Update Standards-Version.
 
- -- Ben Finney <ben+debian@benfinney.id.au>  Tue, 08 Jan 2008 23:28:35 +1100
+ -- Ben Finney <ben+debian@benfinney.id.au>  Thu, 11 Sep 2008 17:59:15 +1000
 
 gracie (0.2.6-1) unstable; urgency=low
 
